--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
   <div class="flex">
 
-    <h1>Tienda deportiva</h1>
+    <h1 class="titulo">Tienda deportiva</h1>
     <section class="carrito-c animated nav">
       <span style="font-size:30px;cursor:pointer" id="openCar">
         <img src="./imgs/kisspng-shopping-cart-scalable-vector-graphics-clip-art-car-park-system-finger-scan-cctv-folding-gate-5c989bbf63efd3.2555186515535052154093.png" class="nav-link dropdown-toggle img-fluid" height="90px"
@@ -77,6 +77,8 @@
                     
                 </div>
                 <div class="modal-footer">
+                  <button type="button" class="btn btn-danger" id="vaciar-carrito">Vaciar carrito</button>
+                  <button type="submit"  class="btn btn-success" id="guardar">Finalizar compra</button>
                     <div id="total"></div>
               </div>
             </div>
