agregando operadores avanzado

--- a/compra.html
+++ b/compra.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="row justify-content-between mb-5">
                 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-                    <a class="navbar-brand" href="index.html">BODEGUITA FLORES EIRL</a>
+                    <a class="navbar-brand" href="index.html">Tienda deportiva</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
                         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -53,7 +53,7 @@
                             </div>
                         </div>
 
-                        <div id="carrito" class="table-responsive">
+                        <div id="factura" class="table-responsive">
                             <table class="table" id="lista-compra">
                                 <thead>
                                     <tr>
@@ -121,6 +121,7 @@
     
     <script src="js/bootstrap.min.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/compra.js"></script>
 
 </body>
 
