--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-danger" id="vaciar-carrito">Vaciar carrito</button>
-                  <button type="submit"  class="btn btn-success" id="guardar">Finalizar compra</button>
+                  
+                 <a href="./compra.html"> <button type="submit"  class="btn btn-success" id="guardar" ">Finalizar compra</button></a>
                     <div id="total"></div>
               </div>
             </div>
@@ -89,6 +90,7 @@
       integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
       crossorigin="anonymous"
     ></script>
+    <script src="/js/stock.js"></script>
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
